rewrited movies table : removed original_title, kept id and added slug & en_title as unique key and put the primaryKey on slug only in the Movie model for now it seems good. Will try to change poster column as url link or will remove it. Added style on SPA, added security on documentation. TODO: only one apiToken per user, test poster URL, finish doc
